src/parser/tests/parse_errors/snapshots/rusty__parser__tests__parse_errors__parse_error_containers_tests__missing_pou_name.snap
---
source: src/parser/tests/parse_errors/parse_error_containers_tests.rs
expression: diagnostics
---
error[E007]: Unexpected token: expected Identifier but found VAR
  ┌─ <internal>:3:13
  │
3 │             VAR END_VAR
  │             ^^^ Unexpected token: expected Identifier but found VAR
